# form-filling-assistant

./: .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json
docs/: decision-vault-disabled.md  doc-0-project-overview.md  doc-1-architecture-claude-chat.md  doc-10-file-handling.md  doc-11-small-model-research.md  doc-12-tuning-journal.md  doc-13-sft-diagnosis.md  doc-14-training-data-issues.md  doc-15-real-app-issues.md  doc-16-model-capabilities.md  doc-17-tuning-map.md  doc-2-api-contract.md  doc-3-mcp-tools.md  doc-4-masters-application.md  doc-5-patient-intake.md  doc-6-vault-cross-site.md  doc-7-interactive-testing.md  doc-8-architecture-web-app.md  doc-9-scenario-simulator.md  enhancement_plan.md  plan-llm-u-agent.md  plan-small-model-training.md
mock_data/: session-for-replay-test.jsonl  session-for-reply-test-old.jsonl
python/: pyproject.toml
scripts/: batch-sim.sh  extract-training-data.py  serve-models.sh
tuning/: TRIALS.md  modal_guide.md
tuning/dspy/: optimize_prompt.py
tuning/eval/: run_eval.py
tuning/gepa/: .gitignore  HANDOFF_20260511.md  INCIDENT_2026-05-15_judge_silent_fallback.md  SUMMARY_2026-05-17_GEPA_experiments.md  _litellm_executor_fix.py  build_seeds.py  compare_outputs.py  eval_candidate.py  eval_cases_schema.md  eval_program.py  extract_baseline_from_log.py  gen_and_score.py  gen_cand_preds.py  import_legacy.py  inspect_data_extractor.py  inspect_data_extractor_by_delta.py  inspect_judge_breakdown.py  inspect_outputs.py  judge.py  judge_claude_headless.py  judge_openrouter.py  measure_judge_variance.py  (+20 more)
(+73 files in other folders)
