[project]
name = "form-filling-assistant-ml"
version = "0.1.0"
description = "ML training and serving for form-filling assistant"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm>=0.22",
    "litellm==1.82.6",
    "dspy>=2.6",
    "python-dotenv>=1.0",
    "mlflow>=2.18",
    "anthropic>=0.92.0",
    "openai>=2.29.0",
]

[tool.uv]
python-preference = "system"
